// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > has 'base' ('md') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_18_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-md"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      base select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has 'large' ('lg') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_1c_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-lg"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      large select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has 'small' ('sm') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_14_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-sm"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      small select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has 'tiny' ('xs') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_10_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-xs"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      tiny select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has a floating label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 min-h-fit h-10"
  >
    <span
      class="label"
    >
      Your Country
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-_r_1s_"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      />
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has a label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 min-h-fit h-10"
  >
    <span
      class="label"
    >
      Gender
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-_r_1g_"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Choose gender
      </span>
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has a prefix label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 min-h-fit h-10"
  >
    <span
      class="label"
    >
      Publish date
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-_r_1k_"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Chose year
      </span>
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has a suffix label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 min-h-fit h-10"
  >
    <span
      class="label"
    >
      .com
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-_r_1o_"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Chose domain name
      </span>
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has accent variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_c_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-accent min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      accent select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has error variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_s_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-error min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      error select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has info variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_o_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-info min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      info select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has primary variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_4_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-primary min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      primary select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has secondary variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_8_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-secondary min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      secondary select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has success variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_g_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-success min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      success select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has warning variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_k_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 select-warning min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      warning select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > renders with the correct initial state 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-_r_0_"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 transition-all duration-100 min-h-fit h-10"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      Theme
    </span>
  </button>
</DocumentFragment>
`;
